@@ -1,5 +1,9 @@
 2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* ImageTest.cs: Added ImageFailed.
+
+2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* ImageTest.cs: Added more tests.
 	* Test.png: Added.
 
